--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "williamson/larawhatsapi",
+    "name": "arielkung/larawhatsapi",
     "description": "A laravel Wrapper for WhatsApi",
     "license": "MIT",
     "keywords": [
